--- a/技术文档.md
+++ b/技术文档.md
@@ -2,7 +2,7 @@
 
 ## 1. 技术栈
 
-### 1.1 后端技术栈
+### 1.1 后端技术栈111
 - **核心框架**：Django 4.2.1
 - **权限认证**：Django REST framework + JWT + Casbin
 - **数据库**：MySQL
